// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the correct snapshot when there is a user in the store 1`] = `
<header>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/"
  >
    Show All Movies
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/login"
  >
    Login
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/signup"
  >
    Signup
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/favorites"
  >
    View Favorites
  </NavLink>
  <button
    onClick={[MockFunction]}
  >
    LOG OUT
  </button>
</header>
`;

exports[`Header should match the correct snapshot when there is not a user in the store 1`] = `
<header>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/"
  >
    Show All Movies
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/login"
  >
    Login
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/signup"
  >
    Signup
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav"
    to="/favorites"
  >
    View Favorites
  </NavLink>
</header>
`;
